# deepface-unity-age-estimator

./: .dockerignore  .editorconfig  .gitattributes  .gitignore  ARCHITECTURE.md  CONTRIBUTING.md  Dockerfile  LICENSE  Makefile  README.md  app.py  docker-compose.yml  gunicorn.conf.py  pyproject.toml  pytest.ini  render.yaml  requirements-dev.txt  requirements.txt  wsgi.py
deepface_server/: __init__.py  app_factory.py  cli.py  config.py  errors.py  logging_config.py  openapi.py  schemas.py
docs/: API.md  CHANGELOG.md  EXAMPLES.md  PERFORMANCE.md  RUNBOOK.md  SECURITY.md
scripts/: benchmark.py  smoke_test.py
static/: demo.html  demo.js
tests/: conftest.py  test_analyze_errors.py  test_analyze_success.py  test_analyzers.py  test_analyzers_aggregation.py  test_analyzers_calibration.py  test_analyzers_thresholds.py  test_auth.py  test_batch.py  test_cache.py  test_cli.py  test_config.py  test_health.py  test_image_service.py  test_jobs.py  test_jobs_priority.py  test_jobs_scheduler.py  test_metrics.py  test_openapi.py  test_preprocessing.py  test_preprocessing_augmentation.py  test_preprocessing_normalization.py  test_preprocessing_quality.py  test_rate_limit.py  test_schemas.py  test_security.py  test_security_api_keys.py  test_security_password.py  test_security_permissions.py  test_services_audit_log.py  test_services_quota.py  test_storage_connection.py  test_storage_repositories.py  test_utils.py  test_utils_colors.py  test_utils_hashing.py  test_utils_pagination.py  test_utils_paths.py  test_utils_retry.py  test_utils_text.py  (+5 more)
unity_client/: CHANGELOG.md  (+5 more)
(+77 files in other folders)
